reverted to default light theme due to popular demand

--- a/_themes/casperjs/theme.conf
+++ b/_themes/casperjs/theme.conf
@@ -1,4 +1,4 @@
 [theme]
 inherit = basic
-stylesheet = casperjs.css
-pygments_style = vim
+stylesheet = casperjs-light.css
+pygments_style = default
